Bug 76247 - [Qt][WK2]REGRESSION(r104881): Mock scrollbars broke hundreds of tests
Summary: [Qt][WK2]REGRESSION(r104881): Mock scrollbars broke hundreds of tests
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P1 Critical
Assignee: Csaba Osztrogonác
URL:
Keywords: Qt, QtTriaged
Depends on:
Blocks: 67217 79666
  Show dependency treegraph
 
Reported: 2012-01-12 22:24 PST by Csaba Osztrogonác
Modified: 2012-10-01 04:08 PDT (History)
6 users (show)

See Also:


Attachments
Patch (1.47 KB, patch)
2012-01-13 00:25 PST, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2012-01-12 22:24:24 PST
Mock scrollbars was enabled by default: http://trac.webkit.org/changeset/104881
And unfortunately it broke 393 tests on Qt WK2 platform:
http://build.webkit.sed.hu/results/x86-32%20Linux%20Qt%20Release%20WebKit2/r104881%20%2818492%29/results.html
Comment 1 Csaba Osztrogonác 2012-01-12 22:27:11 PST
These test (and others too) results were same on Qt-WK1 and on Qt-WK2 before,
but they differ now. It wouldn't be good if wk1 and wk2 results were diverge.
Comment 2 Csaba Osztrogonác 2012-01-13 00:25:00 PST
Created attachment 122388 [details]
Patch
Comment 3 Csaba Osztrogonác 2012-01-13 00:25:53 PST
(In reply to comment #2)
> Created an attachment (id=122388) [details]
> Patch

It is a workaround. I think we should disable mock scrollbars on Qt until somebody can check it and find a proper fix.
Comment 4 Csaba Osztrogonác 2012-01-13 01:41:46 PST
Comment on attachment 122388 [details]
Patch

Clearing flags on attachment: 122388

Committed r104910: <http://trac.webkit.org/changeset/104910>
Comment 5 Balazs Kelemen 2012-10-01 00:22:07 PDT
I think we only need to enable mock scrollbars for qt DRT (that has never been happended so far) and rebaseline results. I experimented with this and on the tests I tried there was no difference in the wk1 and wk2 results (although I did not run all).
Comment 6 Balazs Kelemen 2012-10-01 00:30:22 PDT
(In reply to comment #5)
> I think we only need to enable mock scrollbars for qt DRT 
I mean for DRT as well as for WTR.
Comment 7 Balazs Kelemen 2012-10-01 04:08:39 PDT
Let's track the enabling of mock scrollbars in bug 98011