[Qt][WK2]REGRESSION(r104881):It broke hundreds of tests https://bugs.webkit.org/show_bug.cgi?id=76247

Reviewed by Kenneth Rohde Christiansen.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues): Disable mock scrollbars on Qt by default. (workaround)

Canonical link: https://commits.webkit.org/93061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104910 268f45cc-cd09-0410-ab3c-d52691b4dbfc